# aws-codeartifact-poetry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pydoc-markdown.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: lint.yml  python-publish.yml  tests.yml
aws_codeartifact_poetry/: __init__.py  cli.py
aws_codeartifact_poetry/aws/: __init__.py  session.py
aws_codeartifact_poetry/commands/: __init__.py  login.py
aws_codeartifact_poetry/helpers/: __init__.py  catch_exceptions.py  cmd.py  logging.py  poetry.py
docs/: CLI.md  HOME.md
tests/: __init__.py  conftest.py
tests/aws/: __init__.py  test_session.py
tests/commands/: __init__.py  test_login.py
tests/fixtures/: __init__.py  aws.py  click.py
tests/helpers/: __init__.py  test_catch_exceptions.py  test_cmd.py  test_logging.py  test_poetry.py
