[tool.poetry]
name = "aws-codeartifact-poetry"
version = "1.3.0"
description = "AWS CodeArtifact Poetry CLI"
license = "Proprietary"
authors = [ "Lucas Vieira <lucas.vieira94@outlook.com>" ]
maintainers = [ "Lucas Vieira <lucas.vieira94@outlook.com>" ]
readme = "README.md"
repository = "https://github.com/lucasvieirasilva/aws-codeartifact-poetry"
keywords = ['AWS', 'CODEARTIFACT', 'POETRY']
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

  [[tool.poetry.packages]]
  include = "aws_codeartifact_poetry"

  [tool.poetry.scripts]
  aws-codeartifact-poetry = "aws_codeartifact_poetry.cli:cli"

  [tool.poetry.dependencies]
  python = ">=3.8.1,<3.12"
  boto3 = "^1.20"
  click = "^8.0.3"
  toml = "^0.10.2"

  [tool.poetry.dev-dependencies]
  flake8 = "^6.1.0"
  flake8-print = "^5.0.0"
  flake8-pytest-style = "^1.7.2"
  flake8-docstrings = "^1.7.0"
  pytest = "^7.4.1"
  pytest-html = "^4.0.0"
  pytest-cov = "^4.1.0"
  pytest-sugar = "^0.9.7"
  pyfakefs = "^5.2.4"
  autopep8 = "^2.0.4"
  python-semantic-release = "^8.0.8"
  pre-commit = "^3.4.0"
  commitizen = "^3.8.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
src_paths = ["aws_codeartifact_poetry"]
py_version = 37
skip_gitignore = true

[tool.coverage.run]
branch = true
source = [ "aws_codeartifact_poetry" ]

[tool.coverage.report]
exclude_lines = [ ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'./coverage/html' --cov-report xml:'./coverage/coverage.xml'"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
